[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = 'pallet-plonk'
description = 'zkSNARK plonk pallet'
version = '0.2.5'
edition = '2021'
license = "Apache-2.0"
homepage = 'https://github.com/KogarashiNetwork/Kogarashi/'
repository = 'https://github.com/KogarashiNetwork/Kogarashi/'
readme = 'README.md'

[dependencies]
codec = { version = '2.0.0', default-features = false, features = ['derive'], package = 'parity-scale-codec' }
# SBP-M1 review: fetch `frame-system` and `frame-support` directly from GitHub and specified Substrate/Cumulus/Polkadot version.
frame-system = { version = '3.0.0', default-features = false }
frame-support = { version = '3.0.0', default-features = false }
poly-commit = { path = '../../primitive/poly', default-features = false }
zero-plonk = { path = '../../primitive/plonk', default-features = false }
ec-pairing = { path = '../../primitive/pairing', default-features = false }
jub-jub = { path = '../../primitive/jubjub', default-features = false }
zkstd = { path = '../../primitive/zkstd', default-features = false }
bls-12-381 = { path = '../../primitive/bls12_381', default-features = false }
rand_xorshift = { version = '0.2.0', default-features = false, package = 'fullcodec_rand_xorshift' }

[dev-dependencies]
serde = { version = "1.0.102", default-features = false, features = ["derive"] }
rand = { version = "0.8", default-features = false }
# SBP-M1 review: fetch `sp-core`, `sp-io` and `sp-runtime` directly from GitHub and specified Substrate/Cumulus/Polkadot version.
sp-core = { version = '3.0.0', default-features = false }
sp-io = { version = '3.0.0', default-features = false }
sp-runtime = { version = '3.0.0', default-features = false }

[features]
default = ["std"]
std = [
    'codec/std',
    'frame-support/std',
    # SBP-M1 review: think about using code formatter
	'frame-system/std',
    'zero-plonk/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
]
