[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = 'pallet-plonk'
description = 'zkSNARK plonk pallet'
version = '0.2.5'
edition = '2021'
license = "Apache-2.0"
homepage = 'https://github.com/KogarashiNetwork/Kogarashi/'
repository = 'https://github.com/KogarashiNetwork/Kogarashi/'
readme = 'README.md'

[dependencies]
codec = { version = '2.0.0', default-features = false, features = [
    'derive'
], package = 'parity-scale-codec' }
rand_xorshift = { version = '0.2.0', default-features = false, package = 'fullcodec_rand_xorshift' }
poly-commit = { path = '../../primitive/poly', default-features = false }
zero-plonk = { path = '../../primitive/plonk', default-features = false }
ec-pairing = { path = '../../primitive/pairing', default-features = false }
jub-jub = { path = '../../primitive/jubjub', default-features = false }
zkstd = { path = '../../primitive/zkstd', default-features = false }
bls-12-381 = { path = '../../primitive/bls12_381', default-features = false }
frame-system = { tag = 'v3.0.0', default-features = false, git = "https://github.com/paritytech/substrate" }
frame-support = { tag = 'v3.0.0', default-features = false, git = "https://github.com/paritytech/substrate" }

[dev-dependencies]
serde = { version = "1.0.102", default-features = false, features = ["derive"] }
rand = { version = "0.8", default-features = false }
sp-core = { tag = 'v3.0.0', default-features = false, git = "https://github.com/paritytech/substrate" }
sp-io = { tag = 'v3.0.0', default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { tag = 'v3.0.0', default-features = false, git = "https://github.com/paritytech/substrate" }

[features]
default = ["std"]
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'zero-plonk/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
]
