[package]
authors = ['AshWhiteHat<phantomofrotten@gmail.com>']
name = "zero-bls12-381"
description = 'lifted elgamal encryption implementation'
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
zero-crypto = { version = "0.2.1", default-features = false }
rand_core = { version="0.6", default-features = false }
parity-scale-codec = { version = "2", default-features = false, features = ["derive"] }
dusk-bytes = { version = "0.1" }
subtle = { version = "2.0", default-features = false }

[dev-dependencies]
paste = "1.0.11"
rand = { version = "0.8", default-features = false }
rand_xorshift = { version = "0.3", default-features = false }
proptest = "1"
