[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = "zero-bls12-381"
description = 'lifted elgamal encryption implementation'
version = "0.1.10"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/KogarashiNetwork/Kogarashi/'
repository = 'https://github.com/KogarashiNetwork/Kogarashi/'
readme = 'README.md'

[dependencies]
serde = { version = "1.0.102", default-features = false, features = ["derive"] }
zkstd = { path = "../zkstd" }
rand_core = { version="0.6.4", default-features = false }
parity-scale-codec = { version = "2", default-features = false, features = ["derive"] }
dusk-bytes = { version = "0.1" }
subtle = { version = "2.0", default-features = false }

[dev-dependencies]
paste = "1.0.11"
proptest = "1"
