[package]
name = "zero-circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
parity-scale-codec = { version = "2", default-features = false, features = ["derive"] }
zero-plonk = { path = '../plonk' }
zero-jubjub = { path = '../jubjub' }
zero-elgamal = { path = '../elgamal' }
zero-crypto = { path = '../crypto' }
zero-bls12-381 = { path = '../bls12_381' }

