[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = "zero-crypto"
description = 'zkSNARK plonk pallet'
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/zero-network/zero/'
repository = 'https://github.com/zero-network/zero/'
readme = 'README.md'

[dependencies]
parity-scale-codec = { version = "2", default-features = false, features = ["derive"] }
rand_core = { version="0.6", default-features = false }
sp-std = { version = '3.0.0', default-features = false }
subtle = { version = "2.0", default-features = false }

[dev-dependencies]
rand = { version = "0.8", default-features = false }
rand_xorshift = { version = "0.3", default-features = false }
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
zero-bls12-381 = { version = "0.2.0", default-features = false }
proptest = "1"
