[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = "zero-crypto"
description = 'zkSNARK plonk pallet'
version = "0.1.10"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/zero-network/zero/'
repository = 'https://github.com/zero-network/zero/'
readme = 'README.md'

[dependencies]
rand_core = { version="0.6.4", default-features = false }
sp-std = { version = '3.0.0', default-features = false }
parity-scale-codec = { version = "2", default-features = false, features = ["derive"] }

[[test]]
name = "arithmetics"
path = "tests/limbs.rs"
required-features = ["std"]

[features]
default = ["std"]
std = [
    "rand_core/getrandom"
]
