[package]
name = "ed25519"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.102", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "2", default-features = false, features = ["derive"] }
zero-crypto = { path = "../crypto", default-features = false }

[dev-dependencies]
rand_core = { version="0.6.4", default-features = false }
proptest = "1"
paste = "1.0.11"
