[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = "lifted-elgamal"
description = 'lifted elgamal encryption implementation'
version = "0.1.10"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/KogarashiNetwork/Kogarashi/'
repository = 'https://github.com/KogarashiNetwork/Kogarashi/'
readme = 'README.md'

[dependencies]
zkstd = { path = "../zkstd", default-features = false }
jub-jub = { path = "../jubjub", default-features = false }
ec-pairing = { path = "../pairing", default-features = false }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", default-features = false, features = ["derive"] }
num-traits = { version = "0.2.15", default-features = false }

[dev-dependencies]
rand = { version = "0.8" }
rand_core = { version="0.6.4", default-features = false }
