[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = "zero-jubjub"
description = 'twisted edwards curve implementation'
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/zero-network/zero/'
repository = 'https://github.com/zero-network/zero/'
readme = 'README.md'

[dependencies]
serde = { version = "1.0.102", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "2", default-features = false, features = ["derive"] }
rand_core = { version="0.6", default-features = false }
sp-std = { version = '3.0.0', default-features = false }
zero-crypto = { path = '../crypto' }
zero-bls12-381 = { path = '../bls12_381' }
dusk-bytes = { version = "0.1" }
subtle = { version = "2.0", default-features = false }

[dev-dependencies]
rand = { version = "0.8", default-features = false }
rand_xorshift = { version = "0.3", default-features = false }
proptest = "1"
paste = "1.0.11"

[features]
asm = []
