[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = "zero-jubjub"
description = 'twisted edwards curve implementation'
version = "0.1.10"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/KogarashiNetwork/Kogarashi/'
repository = 'https://github.com/KogarashiNetwork/Kogarashi/'
readme = 'README.md'

[dependencies]
serde = { version = "1.0.102", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "2", default-features = false, features = ["derive"] }
rand_core = { version="0.6.4", default-features = false }
sp-std = { version = '3.0.0', default-features = false }
zkstd = { path = "../zkstd", default-features = false }
zero-bls12-381 = { path = "../bls12_381", default-features = false }

sp-core = { version = "3.0.0", default-features = false }
sp-runtime-interface = { version = "3.0.0", default-features = false }
blake2b_simd = { version = "1", default-features = false }

[dev-dependencies]
proptest = "1"
paste = "1.0.11"

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-runtime-interface/std"
]
