[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = "jub-jub"
description = 'twisted edwards curve implementation'
version = "0.1.10"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/KogarashiNetwork/Kogarashi/'
repository = 'https://github.com/KogarashiNetwork/Kogarashi/'
readme = 'README.md'

[dependencies]
zkstd = { path = "../zkstd", default-features = false }
bls-12-381 = { path = "../bls12_381", default-features = false }
serde = { version = "1.0.102", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "2", default-features = false, features = ["derive"] }
rand_core = { version="0.6.4", default-features = false }

[dev-dependencies]
proptest = "1"
paste = "1.0.11"
