[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = "zero-kzg"
description = 'lifted elgamal encryption implementation'
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/zero-network/zero/'
repository = 'https://github.com/zero-network/zero/'
readme = 'README.md'

[dependencies]
zero-crypto = { path = '../crypto' }
zero-bls12-381 = { path = '../bls12_381' }
parity-scale-codec = { version = "2", default-features = false, features = ["derive"] }
rand_core = { version="0.6", default-features = false }
rayon = "1.5.1"

[dev-dependencies]
rand = { version = "0.8", default-features = false }
rand_xorshift = { version = "0.3", default-features = false }
proptest = "1"

[features]
default = ["std"]
std = []
